# kratos

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  codecov.yml  conftest.py  setup.py
.github/workflows/: arm-deploy.yml  clang-tidy.yml  cov.yml  ctest.yml  docker.yml  linux-deploy.yml  linux.yml  macos-deploy.yml  macos.yml
docker/: Dockerfile  Dockerfile-Cad  Dockerfile-Test
docs/: .gitignore  Makefile  basics.rst  conf.py  generator.rst  index.rst  kratos.rst  requirements.txt  testbench.rst  verilog.rst
docs/advanced/: attributes.rst  backend.rst  clone.rst  debug.rst  dpi.rst  fsm.rst  functions.rst  interface.rst  parameter.rst  passes.rst  statements.rst  struct.rst
examples/: uart.py
kratos/: .gitignore  __init__.py  debug.py  formal.py  fsm.py  func.py  generator.py  interface.py  lib.py  passes.py  ports.py  pyast.py  sim.py  stmts.py  tb.py  util.py
python/: CMakeLists.txt  kratos.cc  kratos_codegen.cc  kratos_context.cc  kratos_debug.cc  kratos_debug.hh  kratos_enum.cc  kratos_event.cc  kratos_except.cc  kratos_expr.cc  kratos_expr.hh  kratos_fault.cc  kratos_formal.cc  kratos_fsm.cc  kratos_generator.cc  kratos_interface.cc  kratos_lib.cc  kratos_pass.cc  kratos_python.cc  kratos_sim.cc  kratos_stmt.cc  kratos_stmt.hh  kratos_tb.cc  kratos_util.cc
scripts/: ci.sh  cov.sh  deploy.sh
src/: CMakeLists.txt  analysis.cc  analysis.hh  ast.cc  ast.hh  code_gen.cpp  code_gen.h  codegen.cc  codegen.cpp  codegen.h  codegen.hh  context.cc  context.hh  db.hh  debug.cc  debug.hh  eval.cc  eval.hh  event.cc  event.hh  except.cc  except.hh  expr.cc  expr.hh  fault.cc  fault.hh  formal.cc  formal.hh  fsm.cc  fsm.hh  generator.cc  generator.hh  graph.cc  graph.hh  hash.cc  hash.hh  interface.cc  interface.hh  io.cc  io.hh  (+28 more)
src/ir/: module.cc  module.hh  port.hh
src/runtime/: .gitignore  CMakeLists.txt  debug_runtime.cc
tests/: CMakeLists.txt  test_analysis.cc  test_analysis.py  test_ast.cc  test_debug.cc  test_debug.py  test_event.py  test_example.py  test_expr.cc  test_expr.py  test_fault.cc  test_formal.py  test_fsm.py  test_generator.cc  test_generator.py  test_interface.py  test_ir.cc  test_ir.py  test_lib.cc  test_lib.py  test_module.cc  test_optimize.cc  test_optimize.py  test_pass.cc  test_regression.py  test_serialize.cc  test_sim.cc  test_sim.py  test_stmt.cc  test_tb.cc  test_tb.py  test_transform.cc  test_transform.py
tests/gold/: packed_struct_pkg.sv  packed_struct_pkg.svh  test_add_child_interface_port_wiring.sv  test_always_latch.sv  test_assert_fail.sv  test_async_reg.sv  test_breakpoint.sv  test_bundle.sv  test_comment.sv  test_const_port.sv  test_create.sv  test_create_stub.sv  test_create_stub_95.sv  test_create_stub_flatten.sv  test_data_if_false.sv  test_data_if_true.sv  test_dpi.sv  test_else_if.sv  test_enum.sv  test_enum_port.sv  test_exception.sv  test_fanout_mod_inst.sv  test_fanout_mod_inst_passthrough.sv  test_file_ops.sv  test_flush_skip.sv  test_for_loop.sv  test_for_loop_no_unroll.sv  test_fsm.csv  test_fsm.dot  test_fsm.sv  test_fsm_mealy.sv  test_fsm_state.sv  test_function.sv  test_gen_inst_lift.sv  test_generator_property.sv  test_interface_modport_local.sv  test_ir_port.sv  test_local_function.sv  test_long_statement.sv  test_mod_instantiation.sv  (+36 more)
tests/tb/: tb_dump_cov.cc
tests/vectors/: icc_cov.txt  module1.sv  module2.sv
